# osm-relatify

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  biome.json  bus_collection_builder.py  config.py  cython_build.py  main.py  openstreetmap.py  overpass.py  pyproject.toml  relation_builder.py  route_warnings.py  shell.nix  taginfo.json  user_session.py  utils.py  xmltodict_postprocessor.py
cython_lib/: route.py  setup.py
models/: bounding_box.py  download_history.py  element_id.py  fetch_relation.py  final_route.py  relation_member.py
static/css/: style.css
static/img/: banner.xcf  bus_stop_check.xcf
static/img/favicon/: icon_aligned.xcf  icon_cleaned.xcf
static/js/: busStopsContext.js  busStopsLayer.js  map.js  menu.js  utils.js  waysEndpoint.js  waysRoute.js
static/leaflet/: leaflet-ant-path.es6.js  leaflet-ant-path.js.map  leaflet-arrowheads.min.js  leaflet-src.esm.js  leaflet-src.js
templates/: _base.jinja2  _licenses_modal.jinja2  _menu.jinja2  _navbar.jinja2
web/: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  biome.json  bus_collection_builder.py  compression.py  config.py  default.nix  deflate_middleware.py  main.py  openstreetmap.py  orjson_response.py  overpass.py  pkgs.nix  pyproject.toml  relation_builder.py  route.py  route_warnings.py  setup.py  shell.nix  user_session.py  utils.py  xmltodict_postprocessor.py
web/cython_lib/: geoutils.py  route.py  utils.py
web/models/: bounding_box.py  bounding_box_collection.py  download_history.py  element_id.py  fetch_relation.py  final_route.py
web/scripts/: docker-update.sh
web/static/css/: style.css
web/static/img/: banner.xcf  bus_stop.xcf  bus_stop_off.xcf  bus_stop_on.xcf  finish.xcf  start.xcf
web/static/js/: antPathLayer.js  busStopsContext.js  busStopsLayer.js  downloadTriggers.js  map.js  menu.js  messageBox.js  utils.js  waysEndpoint.js  waysLayer.js  waysRoute.js
web/static/leaflet/: leaflet-ant-path.es6.js.map  leaflet.geometryutil.min.js
web/templates/: _base.jinja2  _licenses_modal.jinja2  _menu.jinja2  _message_modal.jinja2  _navbar.jinja2  authorized.jinja2  index.jinja2
